name:          monarch
version:       0.11.0.1
synopsis:      Monadic interface for TokyoTyrant.
description:
  This package provides simple monadic interface for TokyoTyrant.

license:       BSD3
license-file:  LICENSE
author:        Noriyuki OHKAWA <n.ohkawa@gmail.com>
maintainer:    Noriyuki OHKAWA <n.ohkawa@gmail.com>
category:      Database
build-type:    Simple
cabal-version: >=1.8
homepage:      https://github.com/notogawa/monarch
tested-with:   GHC ==7.4.1 || ==7.6.3

source-repository head
  type:     git
  location: https://github.com/notogawa/monarch

flag develop
  description: For developer
  default:     False

library
  hs-source-dirs:  src
  exposed-modules:
    Database.Monarch
    Database.Monarch.Mock

  other-modules:
    Database.Monarch.Action
    Database.Monarch.Mock.Action
    Database.Monarch.Mock.Types
    Database.Monarch.Types
    Database.Monarch.Utils

  ghc-options:     -Wall
  build-depends:
      base           >=4   && <5
    , binary         >=0.5
    , bytestring     >=0.9
    , containers     >=0.4
    , mtl            >=2.1
    , network        >=2.3
    , resource-pool  >=0.1
    , stm            >=2.3
    , unliftio       >=0.2

test-suite specs
  if flag(develop)
    buildable: True

  else
    buildable: False

  hs-source-dirs: test
  type:           exitcode-stdio-1.0
  ghc-options:    -Wall -threaded
  main-is:        Spec.hs
  other-modules:
    Database.Monarch.ActionSpec
    Database.Monarch.Mock.ActionSpec

  build-depends:
      base          >=4   && <5
    , bytestring
    , hspec         >=1.3
    , monarch
    , transformers

test-suite doctests
  hs-source-dirs: test
  type:           exitcode-stdio-1.0
  main-is:        doctests.hs
  build-depends:
      base     >=4 && <5
    , doctest

benchmark benchmark
  if flag(develop)
    buildable: True

  else
    buildable: False

  hs-source-dirs: test
  type:           exitcode-stdio-1.0
  main-is:        benchmark.hs
  build-depends:
      base                 >=4 && <5
    , bytestring
    , criterion
    , monarch
    , tokyotyrant-haskell
